<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.vmare</groupId>
	<artifactId>spring-gf-locator</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>spring-gf-locator</name>
	<description>spring-gf-locator</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.github.nyla-solutions</groupId>
			<artifactId>nyla.solutions.core</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.vmware.gemfire</groupId>
			<artifactId>spring-boot-2.7-gemfire-9.15</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.vmware.gemfire</groupId>
			<artifactId>geode-core</artifactId>
			<version>9.15.3</version>
		</dependency>
		<dependency>
			<groupId>org.jgroups</groupId>
			<artifactId>jgroups</artifactId>
			<version>3.6.14.Final</version>
		</dependency>
		<dependency>
			<groupId>com.vmware.gemfire</groupId>
			<artifactId>geode-wan</artifactId>
			<version>9.15.3</version>
		</dependency>
		<dependency>
			<groupId>com.vmware.gemfire</groupId>
			<artifactId>gemfire-for-redis-apps</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-buffer</artifactId>
			<version>4.1.76.Final</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec</artifactId>
			<version>4.1.76.Final</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-resolver</artifactId>
			<version>4.1.76.Final</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport</artifactId>
			<version>4.1.76.Final</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-resolver</artifactId>
			<version>4.1.76.Final</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-handler</artifactId>
			<version>4.1.76.Final</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-common</artifactId>
			<version>4.1.76.Final</version>
		</dependency>
		<dependency>
			<groupId>com.vmware.gemfire</groupId>
			<artifactId>geode-cq</artifactId>
			<version>9.15.3</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>gemfire-release-repo</id>
			<name>Pivotal GemFire Release Repository</name>
			<url>https://commercial-repo.pivotal.io/data3/gemfire-release-repo/gemfire</url>
		</repository>
	</repositories>

</project>
